<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/gradient_animation"
    android:id="@+id/SignInActivity_ConstraintLayout"
    tools:context=".SignInActivity">

    <!-- Login progress -->
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/SignInActivity_ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/SignInActivity_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16pt"
                android:textStyle="bold"
                android:text="@string/app_name"/>

            <LinearLayout
                android:theme="@style/AppTheme.Light"
                android:id="@+id/SignInActivity_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_small_margin"
                android:layout_marginBottom="@dimen/activity_vertical_small_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_large_margin"
                android:layout_marginRight="@dimen/activity_horizontal_large_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/radius_background_large"
                android:orientation="vertical"
                android:elevation="@dimen/elevation">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/SignInActivity_EmailAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/SignInActivity_PasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/activity_vertical_large_margin"
                    android:orientation="horizontal">

                    <Button
                        style="@style/AppTheme.SwitchButton.Left"
                        android:id="@+id/SignInActivity_SignUpButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up" />

                    <Button
                        style="@style/AppTheme.SwitchButton.Right"
                        android:id="@+id/SignInActivity_SignInButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />

                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/SignInActivity_AutoSignInCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_large_margin"
                android:text="@string/auto_login"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            style="@android:style/Widget.Material.Button.Borderless"
            android:id="@+id/SignInActivity_ForgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary"
            android:textAllCaps="false"
            android:text="@string/forgot_password"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>